--- a/app/views/works/_calendar.html.haml
+++ b/app/views/works/_calendar.html.haml
@@ -1,4 +1,4 @@
-%h2#calendarYear Year #{@daySelected.year}
+%h2#calendarYear #{t :works_year} #{@daySelected.year}
 .clear
 %ul#calendarWeek
   -7.times do
@@ -7,7 +7,7 @@
   %li#calendarNavigation
     = link_to image_tag("/images/icons-nancy/calendarweek-prev10.gif"), works_path(:date => @jumping_links.[]("prev10")), :remote => true
     = link_to image_tag("/images/icons-nancy/calendarweek-prev.gif"), works_path(:date => @jumping_links.[]("prev")), :remote => true
-    %span Calendarweek #{@daySelected.-(1).cweek}
+    %span #{t :works_calendarweek} #{@daySelected.-(1).cweek}
     = link_to image_tag("/images/icons-nancy/calendarweek-next.gif"), works_path(:date => @jumping_links.[]("next")), :remote => true
     = link_to image_tag("/images/icons-nancy/calendarweek-next10.gif"), works_path(:date => @jumping_links.[]("next10")), :remote => true
   .clear
