--- a/app/views/customers/contacts/_list.html.haml
+++ b/app/views/customers/contacts/_list.html.haml
@@ -1,13 +1,13 @@
 .contacts
   .details{:style => "display: #{@displayContactsRecord || 'block'};"}
-    %h2 Contacts
+    %h2= Contact.model_name.human
     %span.actions
       = link_to image_tag("/images/icons-nancy/contact-create.gif"), new_customer_location_contact_path(@customer, @location, :order => params[:order]) if can? :manage, Contact
     %hr.clear/
     %ul.toolbar
-      %li.name Name
-      %li Department
-      %li.fon Contact
+      %li.name= t(:customer_contact_name)
+      %li= Contact.human_attribute_name('department')
+      %li.fon= t(:customer_contact_contact)
       .clear
     - @contacts.each do |contact|
       %ul.record
@@ -15,11 +15,11 @@
         %li= contact.department
         %li.fon
           -if !contact.fon.empty?
-            %span= "Fon: #{contact.fon}"
+            %span= "#{Contact.human_attribute_name('fon')}: #{contact.fon}"
           -if !contact.fax.empty?
-            %span= "Fax: #{contact.fax}"
+            %span= "#{Contact.human_attribute_name('fax')}: #{contact.fax}"
           -if !contact.mobile.empty?
-            %span= "Mobile: #{contact.mobile}"
+            %span= "#{Contact.human_attribute_name('mobile')}: #{contact.mobile}"
         %li.actions
           = mail_to contact.email, image_tag("/images/icons-nancy/mail.gif")
           = link_to image_tag("/images/icons-nancy/edit.gif"), edit_customer_location_contact_path(@customer, @location, contact, :order => params[:order]) if can? :manage, Contact
