--- a/app/views/works/_form.html.haml
+++ b/app/views/works/_form.html.haml
@@ -7,20 +7,21 @@
 #createTimeWrapper
   = form_for(@work, :remote => false) do |f|
     %dl
-      %dt.time= f.label :started_at, "Start:"
+      %dt.time= f.label :started_at
       %dd.time= f.text_field :started_at, :size => 4, :value => "08:00"
-      %dt.time= f.label :ended_at, "End:"
+      %dt.time= f.label :ended_at
       %dd.time= f.text_field :ended_at, :size => 4, :value => "09:00"
       %dd.description= f.text_area :description
+      %dd.fees= select_tag(:fee, options_for_select(Configuration.find_by_key('work_fees').value.split(',').map {|x| ["#{t :works_charge_with} #{number_to_currency(x, :unit => Configuration.find_by_key('currency').value)}", "#{x}"]}))
       %dt.submit
         = f.hidden_field :project_id, :value => @projects.first.id
         = f.hidden_field :day, :value => @daySelected.strftime("%Y-%m-%d")
-        = f.submit "Save time", :class => "submit"
+        = f.submit t('helpers.submit.submit', :model=> Work.model_name.human), :class => "submit"
 #selectWrapper
   %dl
-    %dt Customer
+    %dt= Customer.model_name.human
     %dd= render :partial => "customerlist"
-    %dt Project
+    %dt= Project.model_name.human
     %dd= render :partial => "projectlist"
 .clear
 
