--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -8,6 +8,7 @@
 
 
 html { height: 100% ;}
+html.js input.hide_nojs{ display: none; }
 body {
   min-height: 100%;
   height: 100%;
@@ -167,7 +168,7 @@ div.filter {
 }
 
 
-body { background-color: #fff; color: #333; }
+body { background-color: #4A6A83; color: #333; }
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif !important;
