--- a/app/stylesheets/projects.scss
+++ b/app/stylesheets/projects.scss
@@ -109,7 +109,7 @@ div.project {
 }
 body#report  {
 	@include gradient(white, white);
-	div#content { width: 620px; margin: 0px 20px;}
+	div#content { width: 680px; margin: 0px 20px;}
 	p.sender{
 	padding: 15px 0px 10px 0px; 
 	font-size: 7pt!important;
@@ -137,10 +137,29 @@ body#report  {
 	ul{ 
 	padding-bottom: 5px;
 	border-bottom: 1px dashed grey;
-		li.time{@include grid(15,0,1);	padding: 5px 0px 5px 0px;}
-		li.description{color: $orangeRed; @include grid(30,0,1);padding: 5px 0px 5px 0px;}
-		li.duration{@include grid(15,0,0); padding: 5px 0px 5px 0px;}
-		
+		li.time{ padding: 5px 0px; @include grid(10,0,1);	}
+		li.description{
+		  padding: 5px 0px;
+		  color: $orangeRed;
+		  @include grid(36,0,1);
+		}
+		li.duration, li.sum {
+		  @include grid(10,0,0);
+		  padding: 5px 0px;
+		  text-align: right;
+		}
+	}
+	dl#sum {
+	  dd, dt { font-size: 14px; padding: 3px 0px;}
+	  dt { @include grid(58); }
+	  dt.duration { @include grid(48); }
+	  dd {
+	    text-align: right;
+	    @include grid(10);
+	  }
+	  .discount, .tax { border-bottom: 2px solid black;}
+	  .tax, .net, .final { font-weight: bold; }
+	  
 	}
 	/*dl{
 	border-top: 2px solid $grey;
