--- a/app/stylesheets/projects.scss
+++ b/app/stylesheets/projects.scss
@@ -5,46 +5,43 @@ body#projects {
     div.wrapper {
       @include rounded;
       background-color: $yellow;
-	 border: 1px solid grey;
-	border-top:5px solid $orangeRed;
-	  	      }
-		 
+	    border: 1px solid grey;
+	    border-top:5px solid $orangeRed;
+	  } 
 	 a {display: block; font-weight:bold; padding: 0px 0px 15px 15px; color: white;}
 	
-    div#createProject {
-      @include grid(52,1,2);
-      legend 
-      dl dt { text-align: left;}
-      dl dd, dl dt, legend { margin-bottom: 10px;}
-      dl dt.title { @include grid(8); font-weight:bold;}
-      dl dd.title { @include grid(42); }
-      dl dd.title input { width: 420px;}
-
-      dl dt.description { @include grid(10,0,40); font-weight:bold;}
-      dl dd.description { @include grid(50);  }
-      dl dd.description textarea {
-        height: 60px;
-        width: 500px;
-      }
-      dl dt.small { @include grid(11);  }
-      dl dd.small { @include grid(6); }
-      dl dd.small input { width: 40px; }
-      dl dt.submit {@include grid(16);}
-      dl dt.submit input.submit {margin:0px;}
+  div#createProject {
+    @include grid(52,1,2);
+    legend dl dt { text-align: left;}
+    dl dd, dl dt, legend { margin-bottom: 10px;}
+    dl dt.title { @include grid(8); font-weight:bold;}
+    dl dd.title { @include grid(42); }
+    dl dd.title input { width: 420px;}
+    dl dt.description { @include grid(10,0,40); font-weight:bold;}
+    dl dd.description { @include grid(50);  }
+    dl dd.description textarea {
+      height: 60px;
+      width: 500px;
     }
+    dl dt.small { @include grid(11);  }
+    dl dd.small { @include grid(6); }
+    dl dd.small input { width: 40px; }
+    dl dt.submit {@include grid(16);}
+    dl dt.submit input.submit {margin:0px;}
+  }
     div#selectCustomer {
-      fieldset.customer { margin-top: 27px; }
-      @include grid(34);
-      dl dt { @include grid(10,1,2); }
-      dl dd {@include grid(18);}
-      dl dd select { width: 180px; }
-    }
-  } 
+    fieldset.customer { margin-top: 27px; }
+    @include grid(34);
+    dl dt { @include grid(10,1,2); }
+    dl dd {@include grid(18);}
+    dl dd select { width: 180px; }
+  }
+  }
   
   div.toolbar li, ul.title li { @include grid(29,0,0,1,1); }
   ul.title li.nr { @include grid(6); }
-   div.toolbar li.nr{ @include grid(7); }
-   div.toolbar li{ @include grid(30.5); }
+  div.toolbar li.nr{ @include grid(7); }
+  div.toolbar li{ @include grid(30.5); }
   ul.title li.date { @include grid(12); }
   div.toolbar li.date{ @include grid(16); }
   ul.title li.actions {
@@ -55,58 +52,62 @@ body#projects {
 
 
 div.project {
-  color: $darkGrey;
-  margin-bottom: 5px;
-  
-
-  div.content {
-    @include roundedBottom;
-	@include roundedTop; 
-	border: 1px solid grey;
-	border-top:5px solid $darkGrey;
-    div.main {
-	  dl 
-      dl dt { font-weight: bold; }
-      dl dt, dl dd { @include grid(8); }
-      dl dt.description, dl dd.description { @include grid(80, 0, 14); margin-bottom: 10px; }
+  div.projectInformation {
+    dl dt { font-weight: bold; }
+    dl dt, dl dd { @include grid(8); }
+    dl dt.description, dl dd.description { @include grid(80, 0, 14); margin-bottom: 10px; }
+  }
+  div.contacts {
+    margin-top: 20px;
+    ul.record li span {
+      display: block;
     }
-    div.contacts {
-      margin-top: 20px;
-      ul.record li span {
-        display: block;
-      }
-      li.actions {
-        text-align: right;
-      }
-      ul.toolbar, ul.record {
-        li { @include grid(27) }
-        li.actions { @include grid(7) }
-      }
+    li.actions { text-align: right; }
+    ul.toolbar, ul.record {
+      li { @include grid(27) }
+      li.actions { @include grid(7) }
     }
   }
 }
 
 
 div.project {
-  // GLOBALS
-  div.content {
-    hr {
-      width: 100%;
-      visibility: visible;
+  color: $darkGrey;
+  margin-bottom: 5px;
+  div.nestedRessources {
+    @include roundedBottom;
+    background-color: white;
+    border-left: 1px solid grey;
+    border-right: 1px solid grey;;
+    border-bottom: 1px solid grey;
+    padding: 0px 0px;
+    
+    div.projectInformation, div.contacts {
+      background-color: white;
+      @include roundedTop;
+  	  @include roundedBottom;
+  	  border-top:5px solid $darkGrey;
+      padding: 8px;
     }
-    h2, span.actions, form legend { font-weight: bold; }
+    hr { width: 100%; visibility: visible; }
+    h2, div.details span.actions, form legend {
+      font-weight: bold;
+	    color: $darkRed;
+      font-size: 11px;
+    }
     h2, form legend { @include grid(78) }
     span.actions, form a {
       @include grid(10);
       text-align: right;
     }
-    
     ul.toolbar {
       border-bottom: 2px dotted grey;
       li { color: grey; }
     }
   }
 }
+
+
 body#report  {
 	@include gradient(white, white);
 	div#content { width: 680px; margin: 0px 20px;}
@@ -133,38 +134,31 @@ body#report  {
 	}
 	
 	div#works{
-	
-	ul{ 
-	padding-bottom: 5px;
-	border-bottom: 1px dashed grey;
-		li.time{ padding: 5px 0px; @include grid(10,0,1);	}
-		li.description{
-		  padding: 5px 0px;
-		  color: $orangeRed;
-		  @include grid(36,0,1);
-		}
-		li.duration, li.sum {
-		  @include grid(10,0,0);
-		  padding: 5px 0px;
-		  text-align: right;
-		}
-	}
-	dl#sum {
-	  dd, dt { font-size: 14px; padding: 3px 0px;}
-	  dt { @include grid(58); }
-	  dt.duration { @include grid(48); }
-	  dd {
-	    text-align: right;
-	    @include grid(10);
-	  }
-	  .discount, .tax { border-bottom: 2px solid black;}
-	  .tax, .net, .final { font-weight: bold; }
-	  
-	}
-	/*dl{
-	border-top: 2px solid $grey;
-		dt{font-weight: bold; font-style: italic; @include grid(15,32,0);}
-		dd{@include grid(15,42,0);}
-	 }*/
-			}
-		  }
+  	ul{ 
+  	padding-bottom: 5px;
+  	border-bottom: 1px dashed grey;
+  		li.time{ padding: 5px 0px; @include grid(10,0,1);	}
+  		li.description{
+  		  padding: 5px 0px;
+  		  color: $orangeRed;
+  		  @include grid(36,0,1);
+  		}
+  		li.duration, li.sum {
+  		  @include grid(10,0,0);
+  		  padding: 5px 0px;
+  		  text-align: right;
+  		}
+  	}
+  	dl#sum {
+  	  dd, dt { font-size: 14px; padding: 3px 0px;}
+  	  dt { @include grid(58); }
+  	  dt.duration { @include grid(48); }
+  	  dd {
+  	    text-align: right;
+  	    @include grid(10);
+  	  }
+  	  .discount, .tax { border-bottom: 2px solid black;}
+  	  .tax, .net, .final { font-weight: bold; }
+  	}
+  }
+}
