--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -22,6 +22,8 @@
       Created at
       = link_to image_tag("/images/icons-nancy/order-up.gif"), projects_path(:order => "created_at asc", :closed => params[:closed])
       = link_to image_tag("/images/icons-nancy/order-down.gif"), projects_path(:order => "created_at desc", :closed => params[:closed])
+
+
 -@projects.each do |project|
   .project
     - if project.id == @project.id && "#{params[:controller]}/#{params[:action]}" != 'projects/edit' 
@@ -35,8 +37,8 @@
           = link_to image_tag("/images/icons-nancy/edit.gif"), edit_project_path(project, :order => params[:order], :closed => params[:closed]) if can? :manage, Project
           = link_to image_tag("/images/icons-nancy/delete.gif"), project_path(project, :order => params[:order], :closed => params[:closed]), :confirm => 'Are you sure?', :method => :delete if can? :manage, Project
         .clear
-      .content
-        .main
+      .nestedRessources
+        .projectInformation
           %h2 Project information
           %span.actions
             = link_to image_tag("/images/icons-nancy/project-report.gif"), report_project_path(project)
