--- a/app/views/works/index.html.haml
+++ b/app/views/works/index.html.haml
@@ -1,3 +1,4 @@
+= link_to 'Help', "/#{params[:locale]}/tutorials_work_step1", :class => 'lightbox'
 #calendar
   = render :partial => "calendar"
 #formWrapper
