--- a/app/stylesheets/projects.scss
+++ b/app/stylesheets/projects.scss
@@ -67,6 +67,15 @@ div.project {
       li { @include grid(27) }
       li.actions { @include grid(7) }
     }
+    span.formAction {
+      text-align: right;
+      @include grid(30);
+      form {
+        display: inline;
+        padding: 0px !important;
+      }
+    }
+    h2.formAction { @include grid(58); }
   }
 }
 
