first expense commit

--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -58,6 +58,8 @@
         .contacts
           = render :partial => 'projects/details/contacts'
           = render :partial => 'projects/details/users'
+        .expenses
+          = render :partial => 'projects/expenses/list'
       .clear
     - else
       %ul.title
