--- a/app/views/projects/details/_users.html.haml
+++ b/app/views/projects/details/_users.html.haml
@@ -7,7 +7,7 @@
       %input.hide_nojs{:type=>"submit", :value=>"submit", :name => "subscriberSubmit"}
     = link_to image_tag("/images/icons-nancy/contact-create.gif"), @project
   - else
-    = link_to image_tag("/images/icons-nancy/contact-create.gif"), subscribe_user_project_path
+    = link_to image_tag("/images/icons-nancy/contact-create.gif"), subscribe_user_project_path(@project)
 %hr.clear/
 %ul.record
   - @project.users.each do |user|
@@ -16,5 +16,5 @@
     %li.location &nbsp;
     %li.actions
       = mail_to user.email, image_tag("/images/icons-nancy/mail.gif")
-      = link_to image_tag("/images/icons-nancy/delete.gif"), unsubscribe_user_project_path(:project_id => @project.id, :user_id => user.id), :method => "delete"
+      -#= link_to image_tag("/images/icons-nancy/delete.gif"), unsubscribe_user_project_path(@project.id, :user_id => user.id), :method => "delete"
     .clear
