--- a/app/views/customers/locations/_form.html.haml
+++ b/app/views/customers/locations/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for([@customer, @form_location], :html => {:style => "display: #{@displayLocationForm || 'none'};"}) do |f|
+= form_for([@customer, @form_location], :html => {:style => "display: #{@show_location_form ? 'block' : 'none'};"}) do |f|
   -if @form_location.errors.any?
     #error_explanation
       %h2= "#{pluralize(@form_location.errors.count, "error")} prohibited this contact from being saved:"
